# land-yachting-simulator

./: .gitignore  CMakeLists.txt  README.md  build.bat  conanfile.txt
resources/: models.json  scenes.json
resources/html/: pause.html  script.js  settings.html  style.css  title.html  titlesettings.html
resources/models/test/: cube.dae  cylinder.dae  icosphere.dae
resources/models/yachts/beware/: beware-lod1.dae
resources/models/yachts/blue-piper/: blue-piper-lod1.dae
resources/models/yachts/bobbie/: bobbie-lod1.dae  bobbie.dae
resources/models/yachts/buizerd/: buizerd-lod1.dae  buizerd.dae
resources/models/yachts/red-piper/: red-piper-lod1.dae
resources/models/yachts/vampier/: vampier.dae
resources/objects/blue-piper/: blue-piper.dae
resources/objects/dn-duvel/: dn-duvel.dae
resources/objects/duvel/: duvel.dae  duvel.mtl  duvel2.dae  duvel3.dae
resources/objects/red-piper/: red-piper.dae
resources/scenes/: cartoon.json  main-menu.json  nowater.json  planet_testing.json  realistic.json  test-cartoon.json  test-realistic.json  test.json  testing.json
resources/scenes/test/: rigid-body.json  yacht.json
resources/shaders/: darken-blur.fs  darken-blur.vs  default.fs  fill.fs  fill.vs  fillpath.fs  fillpath.vs  flat.vs  gui.fs  gui.vs  hitbox.fs  hitbox.vs  image.fs  post.fs  simple.fs  single-color.fs  single-color.vs  terrain.fs  terrain.vs  toon-water.fs  toon.vs  water.fs  water.vs
resources/yachts/beware/: beware.dae
resources/yachts/blue-piper/: blue-piper-lod1.dae  blue-piper.dae
resources/yachts/bobbie/: bobbie-lod1.dae  bobbie.dae
resources/yachts/buizerd/: buizerd-lod1.dae  buizerd.dae
resources/yachts/dn-duvel/: dn-duvel-lod1.dae  dn-duvel.dae
resources/yachts/red-piper/: red-piper-lod1.dae  red-piper.dae
resources/yachts/sietske/: sietske-lod1.dae  sietske.dae
resources/yachts/vampier/: vampier-lod1.dae  vampier.dae
src/: easing_functions.h  main.cpp  mesh.h  model.h  pch.h  scene.h
src/animation/: animation.cpp  animation.h  animation.hpp
src/camera/: camera.cpp  camera.h  camera.hpp
src/controller_manager/: controller_manager.cpp  controller_manager.hpp  controller_manager_defs.h
src/debug/: debug.hpp
src/easings/: easings.h
src/event_handler/: event_handler.cpp  event_handler.h  event_handler.hpp  event_handler_defs.h
src/file_manager/: file_manager.cpp  file_manager.h  file_manager.hpp
src/frame_buffer/: frame_buffer.cpp  frame_buffer.h  frame_buffer.hpp
src/framebuffer/: framebuffer.cpp  framebuffer.hpp  framebuffer_util.cpp  framebuffer_util.hpp
src/glgpudriver/: GLGPUDriver.cpp  GLGPUDriver.h
src/input_manager/: input_manager.cpp  input_manager.hpp  input_manager_defs.h
src/math/: math.h
src/mesh/: mesh.cpp  mesh.h  mesh.hpp  mesh_defs.h  mesh_util.cpp  mesh_util.hpp  meshvariant.h
src/model/: bone.h  model.cpp  model.h  model.hpp  model_defs.h  model_util.cpp  model_util.hpp
src/physics/: physics.cpp  physics.h  physics.hpp  physics_defs.h  physics_util.cpp  physics_util.hpp  physicsbuffer.h  yacht.cpp  yacht.hpp
src/render/: render.cpp  render.h  render.hpp  render_defs.h  renderbuffer.h
src/scene/: scene.cpp  scene.h  scene.hpp  scene_defs.h
src/scene_manager/: scene_manager.cpp  scene_manager.h  scene_manager.hpp  scene_manager_defs.h
src/settings/: settings.hpp
src/settings_manager/: settings.h  settings_manager.cpp  settings_manager.hpp
src/shader/: shader.cpp  shader.h  shader.hpp  shaderID.h  shader_util.cpp  shader_util.hpp
src/shaders/: animated.fs  animated.vs  darken-blur.fs  default.fs  default.vs  image.fs  image.vs  model.fs  model.vs  pause.fs  pbr.fs  post.fs  skybox.vs  text.fs  text.vs  toon-terrain.fs  toon-terrain.vs  toon-water.fs  toon-water.vs  toon.fs  toon.vs  water.fs  water.vs  water2.fs  water2.vs
src/texture_manager/: texture_manager.cpp  texture_manager.h  texture_manager.hpp  texture_manager_defs.h
src/thread_manager/: thread_manager.cpp  thread_manager.h  thread_manager.hpp
src/time_manager/: time_manager.cpp  time_manager.hpp
src/ui_manager/: ui_button.cpp  ui_button.h  ui_button.hpp  ui_manager.cpp  ui_manager.hpp  ui_manager_defs.h  ui_selector.cpp  ui_selector.hpp  ui_toggle.cpp  ui_toggle.h  ui_toggle.hpp  widget.cpp  widget.hpp
src/window_manager/: window_manager.cpp  window_manager.hpp
